# cidrrr

./: Cargo.toml  Justfile  README.md  check.sh
.github/workflows/: release.yml  test.yml
src/: cli.rs  ips.rs  main.rs
